--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
-#navbar {
-    display: flex;
+body {
+    padding: 0;
+    margin: 0;
 }
 
-nav>a {
-    margin: 0rem 10rem;
+nav {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    justify-content: flex-end;
+    gap: 4rem;
+    background-color: #AD0C70;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FA43B4;
+    font-weight: bold;
+    padding: 1rem 2rem;
 }
